--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -4,6 +4,7 @@ html, body {
 }
 
 footer {
+    text-shadow:0 0 5px rgba(255, 255, 255, 0.9), 0 0 20px rgba(255, 255, 255, 0.7);
     background-color: rebeccapurple;
     position: fixed;        /* Fija el footer en la parte inferior */
     bottom: 0;              /* Lo posiciona al fondo de la pantalla */
